--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,6 @@
 body {
 	min-height: 100%;
-	min-width: @screen-xs;
+	min-width: 320px;
 
 	@media (min-width: @screen-md-min) {
 		padding-top: 50px;
