updated categories page

--- a/less/categories.less
+++ b/less/categories.less
@@ -65,6 +65,11 @@
 						margin: 0 !important;
 					}
 				}
+				.white-list{
+					padding: 16px;
+					margin: 10px -15px -15px -16px;
+					word-break: break-word;
+				}
 			}
 
 			.stats {
